--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: ruby
 rvm:
-  - 2.2.1
+  - "2.2.1"
+services:
+  - postgresql
+before_script:
+  bundle exec rake db:test:prepare
+addons:
+  postgresql: "9.4"
